--- a/tryCatchProject/tryCatchProject.csproj
+++ b/tryCatchProject/tryCatchProject.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="negativeException.cs" />
+    <Compile Include="NegativeNum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
